testsuite/poke.pkl/sizeof-diag-1.pk
/* { dg-do compile } */

fun foo = offset<uint<64>,b>:
  {
   type t = int[];

   return sizeof (t); /* { dg-error "" } */
  }
